@startuml

@startuml
entity entity {
  * entity_id: BIGINT <<PK>>
  --
  * author_id: BIGINT <<FK>>
  --
  * entity_type: ENUM
  * created_at: TIMESTAMP
}

entity post {
  * post_id: BIGINT <<PK, FK>>
  --
  * title: VARCHAR(255)
  * content: TEXT
  * author_id: BIGINT
  * updated_at: TIMESTAMP
}

entity discussion {
  * discussion_id: BIGINT <<PK, FK>>
  --
  * title: VARCHAR(255)
  * status: ENUM
  * content: TEXT
  * updated_at: TIMESTAMP <<default: now()>>
}

entity comment {
  * comment_id: BIGINT <<PK, FK>>
  --
  * content: TEXT
  * parent: BIGINT <<FK>>
  * updated_at: TIMESTAMP <<default: now()>>
}

entity rating {
  * entity_id <<PK, FK>>
  * user_id <<PK, FK>>
  --
  * rating: BOOLEAN
  * created_at: TIMESTAMP <<default: now()>>
}

entity bookmark {
  * entity_id <<PK, FK>>
  * user_id <<PK, FK>> <<constraint: entity_type = 'post' or entity_type = 'discussion'>>
  --
  * created_at: TIMESTAMP <<default: now()>>
}

entity user {
  * user_id: BIGINT <<PK>>
  --
  * username: VARCHAR(255) <<not null>>
  * email: VARCHAR(255) <<not null>>
  * password: VARCHAR(255) <<not null>>
  * created_at: TIMESTAMP <<default: now()>>
}


entity edit_request {
  * edit_id: BIGINT <<PK>>
  * user_id: BIGINT <<PK>>
  --
  * content: TEXT
  * created_at: TIMESTAMP
}


entity ||--o| post : is
entity ||--o| discussion : is
entity ||--o| comment : is
entity ||--o{ bookmark : references
entity ||--o{ rating : has
entity }o--|| user : publishes
entity ||--|| comment : references

edit_request }o--|| entity : edit_request
edit_request }o--|| user : requests

rating }o--|| user : rates
bookmark }o--|| user : references

@enduml